--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Eye Clicker</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Eye Clicker</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="counter">0</div>
 
-<div id="counter">0</div>
-<div class="eye" id="eye">
-  <div class="eyelid top"></div>
-  <div class="eyelid bottom"></div>
-  <div class="pupil" id="pupil"></div>
-</div>
+    <div class="eye-container">
+      <div class="eye" id="eye">
+        <div class="eyelid top"></div>
+        <div class="eyelid bottom"></div>
+        <div class="pupil" id="pupil"></div>
+      </div>
+    </div>
 
-<script src="script.js"></script>
-</body>
+    <div id="upgrades">
+      <button id="doubleClickBtn">Double Click (+10 sang)</button>
+      <button id="autoClickBtn">Auto Click (+1/sec)</button>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
